# Minerva

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT_PLAN.md  MinervaPRD.md  README.md  skills-lock.json
.claude/: settings.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/models/: schemas.py  ticket_validator.py
backend/app/routers/: market.py  research.py  scanner.py  watchlist.py  watchlists.py
backend/app/services/: indicators.py  market_breadth.py  openrouter_client.py  position_sizer_service.py  pre_screen.py  prompts.py  prompts_mean_reversion.py  rs_calculator.py  scanner.py  sr_detector.py  workflow.py
backend/app/services/skills/: __init__.py
backend/app/services/workflows/: mean_reversion.py  prompts_support_bounce.py  support_bounce.py  swing_trade.py
backend/app/utils/: validators.py
backend/scripts/backtest/: __main__.py  data_loader.py  llm_cache.py  portfolio.py  reporter.py  simulator.py
backend/scripts/migrations/: 001_initial_schema.sql  002_ticket_metadata.sql  003_data_integrity.sql  004_named_watchlists.sql  005_rich_ticket_schema.sql
backend/tests/: test_pre_screen_support_bounce.py  test_sr_detector.py  test_ticket_validation.py  test_validators.py
backend/tests/backtest/: test_data_loader.py  test_llm_cache.py  test_portfolio.py  test_reporter.py  test_simulator.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  WORKFLOW.md  WORKFLOWS.md
frontend/: .env.example  .gitignore  README.md  (+5 more)
(+26 files in other folders)
