[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva-backend"
version = "0.1.0"
description = "Trading Research Copilot - Backend API"
authors = [{name = "Minerva Team"}]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=html"
